tests/typechecker/should_pass/nested_instance.csp
module M2(X)
exports

module N
exports
a=2
endmodule

endmodule

-- instance I2 = M2(0)
