tests/typechecker/should_fail/incorrect_module_argument_count.csp
module M(a)
exports
endmodule

instance N = M(0, 1)
